--- a/index.html
+++ b/index.html
@@ -2,51 +2,29 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Profile | Leonardo Ramirez</title>
+  <title>Python Project | Leonardo Ramirez</title>
 </head>
 
 <body>
 
-  <h1>Leonardo Ramirez</h1>
+  <h1>Python Project</h1>
 
-  <img src="photo.png" alt="Leonardo Ramirez" height=325 width=250>
+  <img src="TumorResponse.png.png" alt="Charts!" height=325 width=250>
   <hr>
-  <h2>About Me</h2>
-  <p>Hello! My name is Leo, I am a aspiring data analyst!</p>
+  <h2>Description of Pharma Project</h2>
+  <p>The point of this project was to test and showcase my analytical skills. Using Python libraries (pandas, matplotlib) to analyze technical data in order to create graphs that are easy to read and interpret.
+  <br>
+  Here you will find me combining test data(csv format) on different cancer treatment methods used on mice. I also arranged and calculated statistical data from these datasets using pandas, and visualized the results using matplotlib.</p>
   <hr>
-  <h2>Biography</h2>
-  <p>I love being able to recognize patterns and provide actionable insights on those patterns. My favorite tools are Python, SQL, and Tableau!</p>
+  <h2>Findings</h2>
+  <p>1. Capomulin was the most effective treatment shown, reducing average tumor size by ~19% over a 45 day treatment period.
+  </p>
   <hr>
-  <h2>Contact Links</h2>
+  <h2>Link to the Project GitHub</h2>
   <ul>
-    <li><strong>Email:</strong> <a href="mailto:Leonardo.Rami@outlook.com">Outlook</a></li>
-    <li><strong>Github:</strong> <a href="https://github.com/LRamirez94">Github</a></li>
-    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/leonardo-ramirez-28237b75/">LinkedIn</a></li>
+    <li><strong>Github:</strong> <a href="https://github.com/LRamirez94/pharma_project">Pharma Project</a></li>
   </ul>
   <hr>
-  <h2>My Favorites</h2>
-  <table>
-    <tr>
-      <th>Books</th>
-      <th>Movies</th>
-      <th>Music</th>
-    </tr>
-    <tr>
-      <td>The Man Who Solved The Market</td>
-      <td>Anchorman</td>
-      <td>ZZ Top</td>
-    </tr>
-    <tr>
-      <td>Tool and Weapons</td>
-      <td>Lord of the Rings</td>
-      <td>Joe Walsh</td>
-    </tr>
-    <tr>
-      <td>Cloud Atlas</td>
-      <td>The Matrix</td>
-      <td>Jimi Hendrix</td>
-    </tr>
-  </table>
 
 </body>
 
